--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "author": "TyphonEX",
   "version": "0.0.1",
   "type": "module",
+  "homepage": "https://github.com/TyphonEX/electron-drag-window",
   "files": [
     "dist"
   ],
