--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "author": "TyphonEX",
   "version": "0.0.1",
   "type": "module",
-  "homepage": "https://github.com/TyphonEX/electron-drag-window",
+  "repository": "https://github.com/TyphonEX/electron-drag-window",
+  "license": "MIT",
   "files": [
     "dist"
   ],
