--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "electron-drag-window",
   "author": "TyphonEX",
-  "version": "0.1.3",
+  "version": "1.0.0",
   "type": "module",
   "repository": "https://github.com/TyphonEX/electron-drag-window",
   "license": "MIT",
@@ -31,6 +31,13 @@
   "scripts": {
     "build": "tsc && vite build"
   },
+  "keywords": [
+    "electron",
+    "drag",
+    "window",
+    "typescript",
+    "-webkit-app-region"
+  ],
   "devDependencies": {
     "@types/node": "^20.4.5",
     "typescript": "^5.0.2",
